Move image to the new folder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 		<div id="image_1">
-			<img src="Frame 3.png" width="335" height="134">
+			<img src="images/frame_3.png" width="335" height="134">
 		</div>
 	<header class="header">
 	<! -- #Первый блок -->
@@ -40,7 +40,7 @@
 				</div>
 			</div>
 			<div id="image_block1">
-				<img src="Frame 4.png" width="450">
+				<img src="images/frame_4.png" width="450">
 			</div>	
 	</header>
 	<header>
@@ -58,7 +58,7 @@
 	<! -- #Второй блок -->
 		<div id="fact_1">
 		<! -- #Первый факт -->
-			<img src="Frame 5.png" id="block_2_image_1">
+			<img src="images/frame_5.png" id="block_2_image_1">
 			<div id="block_2_text_2">
 				<h2><b>
 					Відвага
@@ -70,7 +70,7 @@
 		</div>
 		<div id="fact_2">
 		<! -- #Второй факт -->
-			<img src="Frame 6.png" id="block_2_image_2">
+			<img src="images/frame_6.png" id="block_2_image_2">
 			<div id="block_2_text_3">
 				<h2><b>
 				Честь
@@ -82,7 +82,7 @@
 		</div>
 		<div id="fact_3">
 			<! -- #Третий факт -->
-			<img src="Frame 7.png" id="block_2_image_3">
+			<img src="images/frame_7.png" id="block_2_image_3">
 			<div id="block_2_text_4">
 				<h2><b>
 					Хайп
@@ -96,7 +96,7 @@
 	<header id="block_3">
 	<! -- #Третий блок -->
 		<div id="block_3_image">
-			<img src="Frame.png">
+			<img src="images/frame.png">
 		</div>
 		<div id="block_3_text">
 			<h1 id="block_3_title"><b>
