--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 						Слава Україні!
 					</p></b>
 					<div id="text_button">
-						<p id="text_burron_1"><a href="https://www.youtube.com/watch?v=AGsIPdyrwM0&t=1s">
+						<button onclick="link()" class="button button-yellow">
 							Го шукати міни
-						</p></a>
+						</button>
 					</div>	
 				</div>
 			</div>
@@ -106,5 +106,6 @@
 				Головна мета Патрона — робити добрі справи для нашого народу. Ми забезпечимо вашу безпеку у часи, коли вона так необхідна
 			</p>
 		</div>
+<script src="script.js"></script>
 	</header>
 </body>
