Added some changes have to do with mobile adaptation

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <DOCTYPE HTML!>
 <html lang="uk">
 <head>
+	<!-- favicon -->
 	<link type="image/x-icon" href="/favicon.ico" rel="shortcut icon">
+	<!-- Google fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="style.css"/>
+	<!-- CSS -->
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/mobli_version.css">
 
 	<title>Пес Патрон</title>
 </head>
@@ -14,7 +18,7 @@
 			<img src="images/frame_3.png" width="335" height="134">
 		</div>
 	<header class="header">
-	<! -- #Первый блок -->
+	<!-- Первый блок -->
 			<div id="square">
 				<div id="text_block1">
 					<p id="text_1"><b>
@@ -36,12 +40,12 @@
 						<button onclick="link()" class="button button-yellow">
 							Го шукати міни
 						</button>
-					</div>	
+					</div>
 				</div>
 			</div>
 			<div id="image_block1">
 				<img src="images/frame_4.png" width="450">
-			</div>	
+			</div>
 	</header>
 	<header>
 		<div id="block_2_text_1">
