Updated the text

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						Доброго вечора, ми з України
 					</b></p>
 					<p id="text_2"><b>
-						На старт. Увага. Побігли!
+						На старт. Увага. Побігли! Ура!
 					</p></b>
 					<h1 id="text_3"><b>
 						Пес-Патрон
